# mailbox2

./: .gitignore  Cargo.toml  typos.toml
cli/: Cargo.toml
cli/src/: lib.rs
email/: Cargo.toml
email/src/: body.rs  header.rs  imap.rs  lib.rs  main.rs  provider.rs
gui/: Cargo.toml
gui/src/: auth.rs  lib.rs
gui/src/pages/: add_config.rs  mod.rs
shared/: Cargo.toml
shared/src/: config.rs  lib.rs  provider.rs
src/: db.rs  imap.rs  main.rs  subject_decoder.rs  test_subject_decoder.rs
