[package]
name = "mailbox-email"
version = "0.1.0"
edition = "2024"

[dependencies]
async-imap.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-native-tls.workspace = true
tokio-stream.workspace = true
mailbox-shared.workspace = true
mailparse.workspace = true

[lints]
workspace = true
